1998-06-17  Marcus G. Daniels  <mgd@ute.santafe.edu>
	
	* swarm.eps: Scale down 75%.  RTF backend doesn't do scaling.

	* Makefile.am (GENERATED_FIGS, figsdir, figs_DATA): New variables
	(handle installation).

1998-06-16  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: autoconf-substitute values for gs, cjpeg, pngtopnm,
	and eps.

1998-06-15  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (EXTRA_DIST): Enumerate the PNG and EPS files.

1998-06-11  Alex Lancaster  <alex@santafe.edu>

	* small-logo.png, switcheroo.png:  Added PNG files.

	* figs.ent: In html - make settitlelogo point to "Small Swarm
	Logo".

1998-06-11  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* figs.ent: Use jpeg, not jpg.

	* swarm.eps: Updated with export from AI 7.0.

	* Makefile.am, complete.png, customized.png: New files.

	* complete.eps, complete.jpg, customized.eps, customized.jpg,
	largelogo.gif, smalllogo.eps, smalllogo.gif, smalllogo.jpg, 
	switcheroo.eps, switcheroo.jpg:  Removed.

1998-06-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* figs.ent, smalllogo.eps, smalllogo.jpg: New files.
